feat: update blocks

--- a/apps/www/styles/globals.css
+++ b/apps/www/styles/globals.css
@@ -92,6 +92,22 @@
     font-synthesis-weight: none;
     text-rendering: optimizeLegibility;
   }
+
+  /* Custom scrollbar styling. Thanks @pranathiperii. */
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: hsl(var(--border));
+    border-radius: 5px;
+  }
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: hsl(var(--border)) transparent;
+  }
 }
 
 @layer utilities {
