feat(www): update theme-color handling

--- a/apps/www/styles/globals.css
+++ b/apps/www/styles/globals.css
@@ -87,7 +87,7 @@
     @apply scroll-smooth;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground overscroll-none;
     /* font-feature-settings: "rlig" 1, "calt" 1; */
     font-synthesis-weight: none;
     text-rendering: optimizeLegibility;
