--- a/apps/www/styles/globals.css
+++ b/apps/www/styles/globals.css
@@ -92,6 +92,12 @@
     font-synthesis-weight: none;
     text-rendering: optimizeLegibility;
   }
+
+  @supports (font: -apple-system-body) and (-webkit-appearance: none) {
+    [data-wrapper] {
+      @apply min-[1800px]:border-t;
+    }
+  }
 }
 
 @layer utilities {
@@ -112,6 +118,16 @@
   .chunk-container::after {
     content: "";
     @apply absolute -inset-4 shadow-xl rounded-xl border;
+  }
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
   }
 }
 
